# Multimodal_Anti_Money_Laundering

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  PHASE1.md  PHASE2.md  PHASE3.md  README.md  REPORT.md  bentofile.yaml  bilstm_metrics.json  distilbert_metrics.json  docker-compose.yaml  graphsage_metrics.json  memo_metrics.json  profile_bilstm.py  pyproject.toml  requirements-graphsage.txt  requirements.serve.txt  requirements.txt  requirements_dev.txt
.dvc/: config
.github/workflows/: ci.yml
api/: README.md
conf/: config.yaml
conf/data/: elliptic.yaml
conf/model/: distilbert.yaml  graphsage_base.yaml  graphsage_large.yaml
conf/training/: default.yaml  fast.yaml
data/: README.md  make_dataset.py  validation.py
data/processed/: bilstm_labels.npy.dvc  bilstm_sequences.npy.dvc  elliptic_stats.json.dvc  graph_edge_index.npy.dvc  graph_features.npy.dvc  graph_labels.npy.dvc  graph_node_ids.npy.dvc
data/raw/: .gitignore  elliptic_bitcoin_dataset.dvc  memo_dataset.csv.dvc
deploy/: DEPLOYMENT.md  canary_rollout.yaml  push_to_spaces.py  sagemaker_endpoint.py
deploy/huggingface/: README.md
dockerfiles/: Dockerfile  Dockerfile.graphsage  Dockerfile.hf  Dockerfile.sagemaker  README.md
docs/: PHASE1.md  PHASE2.md  PHASE3.md  api.md  debug_guide.md  debugging_guide.md  getting_started.md  index.md  mkdocs.yml
grafana/dashboards/: aml_dashboard.json
grafana/provisioning/dashboards/: dashboard.yaml
models/: baseline_metrics.json  register_model_old.py
models/bilstm/: .gitignore  bilstm_best.pt.dvc  bilstm_encoder.pt.dvc
models/distilbert/: .gitignore  memo_model.dvc
models/graphsage/: .gitignore  graphsage_best.pt.dvc  graphsage_encoder.pt.dvc
notebooks/: 01_week1_eda_baseline.ipynb  02_week2_graphsage.ipynb  README.md
prometheus/: prometheus.yml
reports/: graphsage_experiment_comparison.json  metrics.json
reports/drift/: .gitkeep  text_wasserstein_drift.html
reports/experiments/: serving_experiment_comparison.csv  serving_experiment_comparison.md
reports/profiling/: bilstm_benchmark.json  bilstm_cprofile.txt  bilstm_memory.txt  graphsage_benchmark.json  graphsage_cprofile.txt  graphsage_memory.txt  serving_benchmark.json  serving_cprofile.txt  serving_memory.txt
scripts/: test_container.sh
src/multimodal_anti_money_laundering/: __init__.py  config.py  elliptic_preprocess.py  experiment_comparison.py  predict_model.py  profile_bilstm.py  profile_graphsage.py  profile_serving.py  train_bilstm.py  train_distilbert.py  train_graphsage.py  train_graphsage_hydra.py  train_model.py
src/multimodal_anti_money_laundering/data/: __init__.py  elliptic.py  loaders.py  make_dataset.py
src/multimodal_anti_money_laundering/evaluation/: __init__.py  eval_gate.py  metrics.py
src/multimodal_anti_money_laundering/features/: __init__.py  build_features.py
src/multimodal_anti_money_laundering/models/: __init__.py  baseline.py  model.py  profile_distilbert.py  register_model.py  train_distilbert.py
src/multimodal_anti_money_laundering/monitoring/: drift_report.py  metrics_exporter.py  run_drift.py
tests/: test_model.py  test_serving.py
(+7 files in other folders)
